--- a/Front-end/Produtos/cadastroProduto.html
+++ b/Front-end/Produtos/cadastroProduto.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="estilos/dashBoardServico.css" rel="stylesheet">
+    <link href="estilos/cadastroProduto.css" rel="stylesheet">
 
-    <title>ConstruBem - Login</title>
+    <title>ConstruBem - Cadastro Funcionario</title>
 </head>
 <body>
 
     <div class="barra-titulo">
     <h1 class="titulo"> ConstruBem</h1>
+    <button class="button-titulo">Logout</button>
     </div>
     <div class="fundo">
         <div class="barra-lateral">
             <button class="botoes-lateral"> Funcionários</button> <br>
             <button class="botoes-lateral">Produtos</button> <br>
             <button class="botoes-lateral">Serviços</button> <br>
-            <button class="botoes-lateral">Usuários</button> <br>
-
-            <button class="cadastrar">Cadastrar</button>
         </div>
         <div class="caixa-centro">
-            
+            <form action="" method="post">
+            <div class="campo-field" >Nome</div>
+            <input type="text" class="campos"> 
+            <div class="campo-field">Email</div> 
+            <input type="text"  placeholder="nome@email.com" type="text" required class="campos"> 
+            <div class="campo-field">Função</div> 
+            <input type="text" class="campos"> 
+            <div><button type="submit" class="botao-centro">Cadastrar</button></div>
+        </form>
         </div>
 
     </div>
