closed #38,#40 Feito tela de cadastro de produto e dashboard

--- a/Front-end/Funcionarios/cadastroFuncionario.html
+++ b/Front-end/Funcionarios/cadastroFuncionario.html
@@ -23,11 +23,11 @@
         <div class="caixa-centro">
             <form action="" method="post">
             <div class="campo-field" >Nome</div>
-            <input type="text" class="campos"> 
+            <input type="text" class="campos" required> 
             <div class="campo-field">Email</div> 
             <input type="text"  placeholder="nome@email.com" type="text" required class="campos"> 
             <div class="campo-field">Função</div> 
-            <input type="text" class="campos"> 
+            <input type="text" class="campos" required> 
             <div><button type="submit" class="botao-centro">Cadastrar</button></div>
         </form>
         </div>
