--- a/Front-end/Funcionarios/dashBoardFuncionario.html
+++ b/Front-end/Funcionarios/dashBoardFuncionario.html
@@ -16,7 +16,7 @@
     </div>
     <div class="fundo">
         <div class="barra-lateral">
-            <button class="botoes-lateral" onclick="location.href= '../Funcionarios/dashBoardFuncionario.html'" > Funcionários</button> <br>
+            <button class="botoes-lateral" > Funcionários</button> <br>
             <button class="botoes-lateral">Produtos</button> <br>
             <button class="botoes-lateral">Serviços</button> <br>
             <button class="botoes-lateral">Usuários</button> <br>
