--- a/Front-end/Index/login.html
+++ b/Front-end/Index/login.html
@@ -21,7 +21,7 @@
                 <div class="senha-text">Senha</div>
                     <input class="campo" placeholder="*********" type="password" required>
                     <br>
-                <input type="submit" value="Entrar" class="botao">
+                <input type="submit" value="Entrar" class="botao"  onclick="location.href= '../Servicos/dashBoard.html'">
             </form>
         </div>
 
