--- a/Front-end/src/Servicos/dashBoard.html
+++ b/Front-end/src/Servicos/dashBoard.html
@@ -21,7 +21,7 @@
             <button class="botoes-lateral">Serviços</button> <br>
             <button class="botoes-lateral">Usuários</button> <br>
 
-            <button class="cadastrar">Cadastrar</button>
+            <button class="cadastrar" onclick="window.location.href = 'cadastros.html'">Cadastrar</button>
         </div>
         <div class="caixa-centro">
             
