--- a/Front-end/src/Index/login.html
+++ b/Front-end/src/Index/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/login.css" rel="stylesheet">
+    <script src="login.html"></script>
 
     <title>ConstruBem - Login</title>
 </head>
@@ -15,13 +16,13 @@
     </div>
     <div class="fundo">
         <div class="caixa-centro">
-            <form action="POST">
+            <form id="form" >
                 <div class="email-text">Email</div>
-                    <input class="campo" placeholder="nome@email.com" type="text" required>
+                    <input id="email" class="campo" placeholder="nome@email.com" type="text" required>
                 <div class="senha-text">Senha</div>
-                    <input class="campo" placeholder="*********" type="password" required>
+                    <input id="senha" class="campo" placeholder="*********" type="password" required>
                     <br>
-                <input type="submit" value="Entrar" class="botao"  onclick="location.href= '../Servicos/dashBoard.html'">
+                <input type="submit" value="Entrar" class="botao"  onclick="login();">
             </form>
         </div>
 
