--- a/Front-end/src/Index/cadastrarEmpresa.html
+++ b/Front-end/src/Index/cadastrarEmpresa.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/cadastrarUsuario.css" rel="stylesheet">
+    <script src="cadastro.js"></script>
 
     <title>ConstruBem - CadastroEmpresa</title>
 </head>
@@ -17,17 +18,17 @@
     <div class="fundo">
         <div class="caixa-centro">
             <div class="preencher">Preencha todos os campos</div>
-            <form action="POST">
+            <form id="form">
                 <div class="text">Nome</div>
-                    <input class="campo" placeholder="Digite seu nome" type="text" required>
+                    <input id="nome" class="campo" placeholder="Digite seu nome" type="text" required>
                 <div class="text">CNPJ</div>
-                <input class="campo" placeholder="XXX.XXX.XXX-XX" type="text" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
-                <div class="text">Email</div>
-                <input class="campo" placeholder="nome@email.com" type="text" required>
+                <input id="cnpj" class="campo" placeholder="XXX.XXX.XXX-XX" type="text" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
+                <div  class="text">Email</div>
+                <input id="email" class="campo" placeholder="nome@email.com" type="text" required>
                 <div class="text">Senha</div>
-                    <input class="campo" placeholder="*********" type="password" required>
+                    <input id="senha" class="campo" placeholder="*********" type="password" required>
                     <br>
-                <input type="submit" value="Cadastrar" class="botao">
+                <input type="submit" value="Cadastrar" class="botao" onclick="cadastroEmpresa();">
             </form>
         </div>
 
