Adicionado atualizacoes em js

--- a/Front-end/src/Funcionarios/dashBoardFuncionario.html
+++ b/Front-end/src/Funcionarios/dashBoardFuncionario.html
@@ -25,14 +25,17 @@
         </div>
 
 <style>
-    table, tr, td{
+
+table, tr, td{
     font-family: 'Baloo 2', cursive;
     font-style: normal;
     font-weight: bolder;
     font-size: 18px;
     margin-left: 40%;
+    border:tomato;
 
 }
+
 </style>
 
         <div id="caixa" class="caixa-centro" >
