Adicionado funcoes de deletar e listar usando js

--- a/Front-end/src/Funcionarios/dashBoardFuncionario.html
+++ b/Front-end/src/Funcionarios/dashBoardFuncionario.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/dashBoard.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="index.js"></script>
     <title>ConstruBem - Login</title>
 </head>
@@ -26,37 +29,27 @@
 
 <style>
 
-table, tr, td{
+table, tr, td,button{
     font-family: 'Baloo 2', cursive;
     font-style: normal;
     font-weight: bolder;
     font-size: 18px;
-    margin-left: 40%;
-    border:tomato;
+    margin-left: 2%;
+   
+    
 
 }
 
 </style>
 
         <div id="caixa" class="caixa-centro" >
-            <table id="table"></table>
+            <table id="table" class="table"></table>
         </div>
 
     </div>
 </body>
 
-<script>
-    async function getNomeFunc(){
-        const response = await fetch('http://localhost:3000/funcionario')
-        const data = await response.json()
-        show(data)
-    }
 
-    function show(user){
-        let funcionario = `<div>${user.data}</div>`
-        document.querySelector('#caixa').innerHTML = funcionario
-    }
 
-</script>
 
 </html>
