Adicionado funcao logout em todas as telas

--- a/Front-end/src/Servicos/dashBoard.html
+++ b/Front-end/src/Servicos/dashBoard.html
@@ -32,7 +32,7 @@
 
     <div class="barra-titulo">
     <h1 class="titulo"> ConstruBem</h1>
-    <button class="button-titulo">Logout</button>
+    <button class="button-titulo" onclick="logout();">Logout</button>
     </div>
     <div class="fundo">
         <div class="barra-lateral">
