--- a/Front-end/src/Index/cadastrarUsuario.html
+++ b/Front-end/src/Index/cadastrarUsuario.html
@@ -24,7 +24,7 @@
                 <div class="text">CPF</div>
                 <input  id="cpf" class="campo" placeholder="XXX.XXX.XXX-XX" type="text" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
                 <div class="text">Email</div>
-                <input id="email" class="campo" placeholder="nome@email.com" type="text" required>
+                <input id="email" class="campo" placeholder="nome@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" type="text" required>
                 <div class="text">Senha</div>
                     <input id="senha" class="campo" placeholder="*********" type="password" required>
                     <br>
