--- a/Front-end/src/Index/login.html
+++ b/Front-end/src/Index/login.html
@@ -18,7 +18,7 @@
         <div class="caixa-centro">
             <form id="form" >
                 <div class="email-text">Email</div>
-                    <input id="email" class="campo" placeholder="XXX.XXX.XXX-XX" type="text" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
+                    <input id="email" class="campo" placeholder="nome@email.com" type="text" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" required>
                 <div class="senha-text">Senha</div>
                     <input id="senha" class="campo" placeholder="*********" type="password" required>
                     <br>
