atualizado o doc de implantacao

--- a/Front-end/src/Servicos/atualizar.html
+++ b/Front-end/src/Servicos/atualizar.html
@@ -53,7 +53,7 @@
                     <td><input type="text" id="caixa-texto" class="caixa-texto"></td>
                     </tr>
                     <tr>
-                    <td><button type="submit" class="botao-centro" onclick="cadastrarServico()">Atualizar</button></td>
+                    <td><button type="submit" class="botao-centro" onclick="fazAtualiza()">Atualizar</button></td>
                 </tr>
 
             </form>
