--- a/Front-end/src/Funcionarios/dashBoardFuncionario.html
+++ b/Front-end/src/Funcionarios/dashBoardFuncionario.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
     <title>ConstruBem - Login</title>
 </head>
-<body>
+<body onload="pageAtualiza();">
 
     <div class="barra-titulo">
     <h1 class="titulo"> ConstruBem</h1>
